<resources>
    <string name="app_name">EvitaMechanic</string>
    <string name="app_login">Login</string>
    <string name="password">Password</string>
    <string name="userId">UserId</string>
    <string name="register">Register</string>
    <string name="customer_no">Customer Number</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_contact_no">Contact Number</string>
    <string name="select_complaint_type">Select Complaint Type</string>
    <string name="evita_login">Mechanic Login</string>
    <string name="register_evita_mechanics">Mechanics Registration</string>
    <string name="customer_emailid">Customer Email ID</string>
    <string name="cylinder_type">Cylinder Type</string>
    <string name="discount">Discount</string>
    <string name="pan_card">PAN Card</string>
    <string name="gstin">GST IN</string>
    <string name="transaction_code">Transaction Code</string>
    <string name="delivery_man">Delivery Man</string>
    <string name="select_customer">Select Customer</string>
    <string name="chalan_no">Chalan No</string>
    <string name="delivery_mode">Delivery Mode</string>
    <string name="rate_bpcl">Rate (BPCL)</string>
    <string name="rate_for_party">Rate For Party</string>
    <string name="full_cylinder">Full Cylinder</string>
    <string name="total_amount">Total Amount</string>
    <string name="empty_cylinder">Empty Cylinder</string>
    <string name="credit_cylinder">Credit Cylinder</string>
    <string name="amount_of_credit_cylinder">Amount of Credit Cylinder</string>
    <string name="total_credit_cylinder">Total Credit Cylinder</string>
    <string name="total_credit_amount">Total Credit Amount</string>
    <string name="select_date">Select Date</string>
    <string name="title_activity_add_delivery">AddDelivery</string>
    <string name="payment_mode">Payment Code</string>
    <string name="add_delivery">Add Delivery</string>
    <string name="add_new_cylinder_delivery">Add New Cylinder Delivery</string>
    <string name="update_delivery">Update Delivery</string>
    <string name="update_booked_cylinder_delivery">Update Booked Cylinder Delivery</string>
    <string name="payment_status">Payment Status</string>
    <string name="report">Report</string>
    <string name="welcome_screen">Evita Welcome Screen</string>
    <string name="all_customer">All Customer</string>
    <string name="rate_for_you">Rate For You</string>
    <string name="payment_details">Payment Details</string>
    <string name="customer_names">Customer Names</string>
    <string name="rate_for_customer">Rate For Customer</string>
    <string name="full_cylinder_amount">Full Cylinder Amount</string>

</resources>
